--- a/.github/workflows/expense-tracker-api.yml
+++ b/.github/workflows/expense-tracker-api.yml
@@ -15,11 +15,14 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file .github/expense-tracker-api/pom.xml
