--- a/.github/expense-tracker-api/src/main/resources/application.properties
+++ b/.github/expense-tracker-api/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/expensetrackerdb
 spring.datasource.username=expensetracker
-spring.datasource.password=tailBone24
+spring.datasource.password=BookstoreBook12!
